# gpt-cli

./: README.org  pyproject.toml
.github/workflows/: pypi.yml
gpt_cli/: __main__.py
